<resources>
    <string name="app_name">Freespace WhatsApp</string>

    <string name="navigation_drawer_open">Open navigation panel</string>
    <string name="navigation_drawer_close">Close navigation panel</string>
    <string name="Text1_content_main">The program will move the data (Images, audios and videos) from your phone
        (internal storage) to your SD card to free internal space.</string>
    <string name="chooseOption">Choose one of the options below:</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">Move all</string>
    <string name="tab2">Images</string>
    <string name="tab3">Videos</string>
    <string name="title_activity_tab">tabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="radio_move">Move All</string>
    <string name="radio_img">Move Images</string>
    <string name="radio_vid">Move Videos</string>
    <string name="radio_audio">Move Audio</string>
</resources>
