<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.palmeidaprog.freespace_wapp.tabActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text1_content_main" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:checkedButton="@+id/moveAllRadio"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/radio_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moveAllRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radio_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radio_vid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/videoRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radio_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/audioRadio"
            android:layout_weight="1" />
    </RadioGroup>

</RelativeLayout>
